tests/negative/arena_zero_cap.far
fun main() -> i64 {
  a = Arena(0)
  return 0
}
